# TaskScheduler

./: CMakeLists.txt  README.md
lib/: scheduler.h
tests/: CMakeLists.txt  tests_scheduler.cpp
